# actix-web-rust-rest-api

./: Cargo.toml
migrations/2022-09-04-213425_user/: up.sql
src/: config.rs  errors.rs  main.rs  models.rs  schema.rs
src/books/: books_handler.rs  books_model.rs  mod.rs
src/repositories/: user.rs
src/services/: mod.rs  users.rs
