[package]
name = "actix-web-rust-api"
version = "0.1.0"
authors = ["Douglas Oliveira <douglas4030@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
diesel = { version = "1.4.4", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
serde = "1.0.125"